# DSE-07

./: .gitignore  README.md  baselineLinkBudget.m  coding_conventions.md  genericpiecharts.py  mass_input_cost_model.xlsx  piecharts.py  powertradeoff.py  push_to_main.py  pyproject.toml
.github/workflows/: test.yml
Link Visualisation/: antenna.m  createFlexislot.m  createGroundStation.m  orbitLinkVisualisation.m  vehicleInOrbit.m
Link Visualisation/Link budget app for verification/: link_budget_sim_verification.mat  link_budget_sim_verification_low_elevation.mat  midterm_link_budget.mat
Propulsion/: CEA-Investigation.py  CEA-investigation-continued.py  Chamber_Sizer.py  Mixture_Ratio_Optimizer.py  expansion_ratio_optimizer.py  feed-system-sizing.py
boil-off_tool/: BO_tool_README.md
boil-off_tool/BO_tool_package/: BO_tool_main_body.pyx  Boiloff_tool.py  Import_from_ESATAN.py  Plots_from_main_code.py  mass_and_boil-off_v15-1m.csv  setup.py
data/: constants.py  material_prop.py
external_tools/boil-off_tool/: BO_tool_README.md
notebooks/: black_box_budget.py  cooling_notebook.py  cost_notebook.py  debug_cost_notebook.py  landing_legs.py  mass_budget_calculations.py  mass_budget_notebook.py  re-entry_glide_notebook.py  re-entry_notebook.py  re_entry_glide_notebook.py  tank_shape.py  thermodynamics_notebook.py
scripts/: tps_mass.py
src/: ACS_thruster_sizing.py  Link Budget.py  Tank Sizing.py  boil_off_estimation.py  cost_notebook.py  debug_cost_notebook.py  example.py  fatigue_calculation_tool.py  heatflow.py  heatflow_copy.py  organizationalRiskMap.py  power_tradeoff.py
src/Final Sizing/: Tank Sizing Cylinder.py  Tank Sizing.py
src/charts/: orbit_diagram.py  piecharts.py  twr_delta_v_plot.py
src/data/: HermesV1-RASAero-Nose.csv  HermesV1-RASAero.csv  constants.py  cryogenic_data.py  material.py  material_prop.py  tradeOffInput.xlsx
src/h2ermes_tools/: ACS_thruster_sizing_tool.py  aero_tool.py  aerodynamic_coeffs.py  atmosphere.py  avionicsmass.py  boil_off_estimation copy.py  boil_off_estimation.py  debugging_dev_cost.py  development_cost.py  example.py  fairing_sizing_tool.py  fatigue_calculation_tool.py  fatigue_test.py  header_tank.py  landinglegs.py  launch_windows.py  mass_integration.py  n2_chart_generator.py  (+9 more)
tradeoff/: Trade-Off_README.md  data.py  main.py  tradeOff.py  tradeOffInput.xlsx
verification/: test_atmosphere.py  test_cooling_channel.py  test_cooling_coolant.py  test_cooling_heat_transfer.py  test_cooling_material.py  test_example.py  test_exponential_atmosphere.py  test_fatigue.py  test_mass_integration.py  test_nrlmsise_atmosphere.py  test_power.py  test_propulsion.py  test_reentry.py  test_standard_atmosphere.py
(+90 files in other folders)
