[project]
name = "mass_budget"
version = "0.0.1"
description = "Mass budget calculations for a reusable second stage liquid hydrogen tanker"
authors = [
    { name = "Jiri Kovar", email = "j.kovar@student.tudelft.nl" },
]
license = "MIT"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "cython>=3.1.0",
    "marimo>=0.13.6",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pyfluids>=2.8.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pyfluids]
units_system = "SI"
