[project]
name = "h2ermes-tools"
version = "0.0.1"
description = "Tools for design & analysis of a reusable second stage liquid hydrogen tanker"
authors = [
    { name = "Jiri Kovar", email = "j.kovar@student.tudelft.nl" },
    { name = "Soham Katewale", email = "s.katewale@student.tudelft.nl"},
    { name = "Diogo Costa", email = "D.F.CravodaCosta@student.tudelft.nl"},
    { name = "Angélique Orban", email = "A.S.M.Orban@student.tudelft.nl"},
    { name = "Thomas van Haarst", email = "t.j.vanhaarst@student.tudelft.nl"},
    { name = "Ashwanth Krishnamoorthi", email = "a.krishnamoorthi@student.tudelft.nl"},
    { name = "Gergely Homoki", email = "G.Homoki-1@student.tudelft.nl"},
    { name = "Andreea Lupei", email = "A.E.Lupei-1@student.tudelft.nl"},
    { name = "Lucía García Gutiérrez", email = "lgarciagutierr@tudelft.nl"},
    { name = "Matyas Karasek", email = "M.Karasek@student.tudelft.nl"},
    { name = "Dhruv Maggon", email = "D.Maggon@student.tudelft.nl"},
]
license = "MIT"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "cython>=3.1.0",
    "marimo>=0.13.6",
    "matplotlib>=3.10.1",
    "numpy>=1.25.1",
    "pandas>=2.2.3",
    "pyfluids>=2.8.0",
    "tqdm>=4.67.1",
    "scipy>=1.15.3",
    "pyatmos>=1.2.7",
    "setuptools>=80.9.0"
]
optional-dependencies = { dev = [
        "ruff>=0.11.12",
        "pytest>=8.4.0",
]}

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pyfluids]
units_system = "SI"
